fix(basic-3.1, basic-3.2, basic-3.3, basic-3.4): add meaningful class names by BEM, change name class on css and js files, change tag selectors to class selectors

--- a/style.css
+++ b/style.css
@@ -4,38 +4,34 @@ body {
   color: #333;
   font-family: Lato, sans-serif;
 }
-.aaa {
+.info {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
 
-.aaa img {
+.info__img {
   width: 100%;
 }
-.aaa .more_inf {
+.info__link {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-  .aaa { text-align: center;
+  .info { text-align: center;
   }
 }
-.centered-main-page-element {
+.form {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
-.task {
-  width: 56%;
-  display: inline-block;
-  flex-grow: 1
-}
-.task-row-wrapper {
+.form__row {
   display: flex;
+  margin-top: 20px;
 }
-ul {
+.form__list {
   margin:0;
   padding: 0px;
 }
@@ -45,7 +41,7 @@ li, h3 {
 input,button{
   outline:none;
 }
-button {
+.btn {
   background: none;
   border: 0px;
   color: #888;
@@ -54,12 +50,11 @@ button {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
-button:hover {
+.btn:hover {
   color: #3a3a3a;
 }
 /* Heading */
-h3,
-label[for="new-task"] {
+.title {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -68,33 +63,26 @@ label[for="new-task"] {
   margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
+.form__input {
+  flex-grow: 1;
+  width: 226px;
   margin: 0;
   font-size: 18px;
   line-height: 18px;
-  height: 21px;
-  padding: 0 9px;
-  border: 1px solid #ddd;
-  background: #FFF;
-  border-radius: 6px;
   font-family: Lato, sans-serif;
   color: #888;
 }
-input[type="text"]:focus {
+.form__input:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
-  display: block;
-  margin: 0 0 20px;
-}
-input#new-task {
+.form__row .form__input {
   width: 318px;
 }
 
 /* Task list */
-li {
+.form__item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -103,47 +91,50 @@ li {
   justify-content: space-between;
   align-items: center;
 }
-li > * {
-  vertical-align: middle;
-}
-
-li > input[type="checkbox"] {
+.form__checkbox {
   margin: 0 10px;
 }
-li > label {
+.form__label {
+  flex-grow: 1;
+  width: 56%;
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
-  width: 226px;
 }
-li > input[type="text"] {
-    width: 226px
+.btn-svg {
+  background: none;
+  border: 0px;
+  font-size: 15px;
+  width: 60px;
+  font-family: Lato, sans-serif;
+  cursor: pointer;
+  outline: none;
 }
-button.delete img {
+.btn-svg__img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.btn-svg__img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+#completed-tasks .form__label {
   text-decoration: line-through
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.form__input--transparent {
   display:none
 }
 
-ul li.editMode input[type=text] {
+.edit-mode .form__input--transparent {
   display:inline-block;
   width:224px
 }
 
-ul li.editMode label {
+.edit-mode .form__label {
   display:none;
 }
