--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
   color: #333;
   font-family: Lato, sans-serif;
 }
+
 .info {
   width: 500px;
   margin: 0 auto;
@@ -14,33 +15,41 @@ body {
 .info__img {
   width: 100%;
 }
+
 .info__link {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-  .info { text-align: center;
+  .info {
+    text-align: center;
   }
 }
+
 .form {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
+
 .form__row {
   display: flex;
   margin-top: 20px;
 }
+
 .form__list {
   margin:0;
   padding: 0px;
 }
+
 li, h3 {
   list-style:none;
 }
+
 input,button{
   outline:none;
 }
+
 .btn {
   background: none;
   border: 0px;
@@ -50,9 +59,11 @@ input,button{
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
+
 .btn:hover {
   color: #3a3a3a;
 }
+
 /* Heading */
 .title {
   color: #333;
@@ -63,6 +74,7 @@ input,button{
   margin: 0;
   text-transform: uppercase;
 }
+
 .form__input {
   flex-grow: 1;
   width: 226px;
@@ -72,6 +84,7 @@ input,button{
   font-family: Lato, sans-serif;
   color: #888;
 }
+
 .form__input:focus {
   color: #333;
 }
@@ -86,14 +99,15 @@ input,button{
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+
 .form__checkbox {
   margin: 0 10px;
 }
+
 .form__label {
   flex-grow: 1;
   width: 56%;
@@ -101,6 +115,7 @@ input,button{
   box-sizing: border-box;
   font-size: 18px;
 }
+
 .btn-svg {
   background: none;
   border: 0px;
@@ -110,11 +125,13 @@ input,button{
   cursor: pointer;
   outline: none;
 }
+
 .btn-svg__img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
+
 .btn-svg__img:hover {
   transform: rotateZ(0);
 }
