--- a/style.css
+++ b/style.css
@@ -1,13 +1,29 @@
 /* Basic Style */
-body {
+.wrapper {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
 }
 
-.info {
+.visually-hidden:not(:focus):not(active) {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  white-space: nowrap;
+  border: 0;
+  clip: rect(0 0 0 0);
+  -webkit-clip-path: inset(100%);
+          clip-path: inset(100%);
+}
+
+.header__info {
   width: 500px;
   margin: 0 auto;
+}
+
+.info {
   display: block;
   text-align: right;
 }
@@ -18,18 +34,22 @@ body {
 
 .info__link {
   font-family: fantasy, cursive;
+  outline: none;
 }
 
-@media (max-width:768px) {
+@media (max-width: 768px) {
   .info {
     text-align: center;
   }
 }
 
+.section__form {
+  width: 500px;
+  margin: 0 auto;
+}
+
 .form {
   display: block;
-  width: 500px;
-  margin: 0 auto 0;
 }
 
 .form__row {
@@ -39,40 +59,48 @@ body {
 
 .form__list {
   margin: 0;
-  padding: 0px;
-}
-
-li, h3 {
+  padding: 0;
   list-style: none;
 }
 
-input, button {
-  outline: none;
+.form__fieldset {
+  margin: 0;
+  padding: 0;
+  border: none;
 }
 
 .btn {
   background: none;
-  border: 0px;
+  border: 0;
   color: #888;
   font-size: 15px;
-  width: 60px;
   font-family: Lato, sans-serif;
   cursor: pointer;
+  outline: none;
 }
 
 .btn:hover {
   color: #3a3a3a;
 }
 
+.btn_sm {
+  width: 60px;
+}
+
 /* Heading */
 .title {
-  color: #333;
   font-weight: 700;
   font-size: 15px;
-  border-bottom: 2px solid #333;
-  padding: 30px 0 10px;
   margin: 0;
+}
+
+.form__title {
+  position: relative;
+  width: 100%;
+  padding: 30px 0 10px;
+  border-bottom: 2px solid #333;
   text-transform: uppercase;
+  color: #333;
 }
 
 .form__input {
@@ -81,8 +109,14 @@ input, button {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
+  height: 21px;
+  padding: 0 9px;
+  border: 1px solid #ddd;
+  background: #fff;
+  border-radius: 6px;
   font-family: Lato, sans-serif;
   color: #888;
+  outline: none;
 }
 
 .form__input:focus {
@@ -90,7 +124,7 @@ input, button {
 }
 
 /* New Task */
-.form__row .form__input {
+.form__input_wide {
   width: 318px;
 }
 
@@ -106,6 +140,7 @@ input, button {
 
 .form__checkbox {
   margin: 0 10px;
+  outline: none;
 }
 
 .form__label {
@@ -114,6 +149,14 @@ input, button {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
+}
+
+.form__label-hidden {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 18px;
+  padding-left: 0;
 }
 
 .btn-svg {
@@ -137,19 +180,18 @@ input, button {
 }
 
 /* Completed */
-#completed-tasks .form__label {
-  text-decoration: line-through;
-  color: #888;
+.form__list_complete .form__label {
+  text-decoration: line-through #888;
 }
 
 /* Edit Task */
-.form__input--transparent {
+.form__input_transparent {
   display: none;
 }
 
-.edit-mode .form__input--transparent {
+.edit-mode .form__input_transparent {
   display: inline-block;
-  width: 224px;
+  width: 224px
 }
 
 .edit-mode .form__label {
